fixed styling in tag tab where table would overflow

--- a/src/components/Line.module.scss
+++ b/src/components/Line.module.scss
@@ -12,9 +12,6 @@
   min-height: 5vh;
 }
 
-.text {
-}
-
 .tag-section {
   display: flex;
   align-items: center;
