--- a/src/components/TagInfo.module.scss
+++ b/src/components/TagInfo.module.scss
@@ -4,7 +4,9 @@
 .container {
   padding: 0.4rem;
   width: 100%;
+  overflow-y: auto;
 }
+
 .tagTable {
   width: 100%;
   border-collapse: collapse;
